Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60881

undefined reference to QSGDefaultImageNode::setAnisotropyLevel

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.1
    • 5.9.0 Beta 3
    • Location
    • None

      .obj/qgeotiledmapscene.o: In function `QGeoTiledMapRootNode::updateTiles(QGeoTiledMapTileContainerNode*, QGeoTiledMapScenePrivate*, double, QQuickWindow*, bool)':
      qgeotiledmapscene.cpp:(.text+0x3ccf): undefined reference to `QSGDefaultImageNode::setAnisotropyLevel(QSGTexture::AnisotropyLevel)'
      qgeotiledmapscene.cpp:(.text+0x49fa): undefined reference to `QSGDefaultImageNode::setAnisotropyLevel(QSGTexture::AnisotropyLevel)'
      

      Guilty commit is likely 2ace49b0db995a75694218113fd5743d05d97dcb

      configure command line:

      Command line: -confirm-license -prefix /usr -hostprefix /opt/emlix/test -hostbindir /opt/emlix/test/bin -hostdatadir /opt/emlix/test -bindir /usr/bin -libdir /usr/lib -libexecdir /usr/libexec -headerdir /usr/include/qt5 -archdatadir /usr/lib/qt5 -datadir /usr/share/qt5 -plugindir /usr/lib/qt5/plugins -importdir /usr/lib/qt5/imports -translationdir /usr/share/qt5/translations -xplatform emlix/linux-x86_64-g++ -release -opensource -shared -pch -pkg-config -platform linux-g++ -plugin-sql-sqlite -v -no-rpath -nomake tools -sysroot /opt/emlix/test/sysroot -no-opengl -nomake examples -skip svg -skip activeqt -skip wayland -skip 3d -skip graphicaleffects -skip x11extras -skip macextras -skip winextras -skip androidextras -skip webengine -skip canvas3d -skip webview -skip purchasing -skip charts -skip datavis3d -skip virtualkeyboard -skip gamepad -skip speech -skip networkauth -skip remoteobjects -gui -widgets -alsa -no-gstreamer -no-cups -dbus-linked -no-directfb -fontconfig -system-freetype -glib -no-iconv -no-icu -system-libjpeg -system-libpng -openssl-linked -qt-pcre -system-sqlite -tslib -libudev -no-xcb -syslog -no-xinput2 -system-zlib
      

        1. config.summary
          7 kB
          Rolf Eike Beer
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paangele Paolo Angelelli
            rebemlix Rolf Eike Beer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes