Fix building on configurations without opengl

Task-number: QTBUG-60881
Change-Id: Iffdcfe1ebfe81da9b809dceeff61fca044e94891
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>